Send an Email button fix and Unnecessary Car Reset Fixed email hover animation not working Changed resizing car reset to only happen if the car becomes out of bounds

--- a/styles/commonStyles.css
+++ b/styles/commonStyles.css
@@ -103,7 +103,7 @@ a[class="noUnderline"] {
     transition: .25s ease;
 }
 
-.footerEmail:hover {
+#footerEmail:hover {
     box-shadow: 0px 0px 6px 0 royalblue;
 }
 
